--- a/group_vars/control/projects.yml
+++ b/group_vars/control/projects.yml
@@ -13,4 +13,4 @@ controller_projects:
     scm_delete_on_update: true
     scm_update_on_launch: true
     scm_update_cache_timeout: 3600
-    default_environment: smart_mgmt workshop execution environment
+    default_environment: auto_satellite workshop execution environment
