--- a/group_vars/control/execution_environments.yml
+++ b/group_vars/control/execution_environments.yml
@@ -1,6 +1,6 @@
 ---
 controller_execution_environments:
-  - name: smart_mgmt workshop execution environment
-    image: quay.io/s4v0/ee-automated-smart-mgmt-29:latest
+  - name: auto_satellite workshop execution environment
+    image: quay.io/s4v0/ee-automated-smart-mgmt-aap2-dev:latest
   - name: Insights execution environment
     image: quay.io/bdumont/automated-sm-ee
