--- a/group_vars/control/inventories.yml
+++ b/group_vars/control/inventories.yml
@@ -56,6 +56,7 @@ controller_inventory_sources:
     inventory: Workshop Inventory
     credential: Inventory Credential
     source: satellite6
+    execution_environment: auto_satellite workshop execution environment
     update_on_launch: false
     overwrite: true
     source_vars:
