--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@ ansible-navigator.log
 artifacts
 private
 */*.pem
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
