--- a/refresh_route53_dns.yml
+++ b/refresh_route53_dns.yml
@@ -6,7 +6,7 @@
     validate_certs: no
   tasks:
   - name: "Get instance details"
-    import_role:
+    ansible.builtin.import_role:
       name: ec2_node_tools
       tasks_from: get_instance_details
 
@@ -14,7 +14,7 @@
     become: no
     vars:
       controller_dns_record_state: present
-    route53:
+    amazon.aws.route53:
       state: "{{ controller_dns_record_state }}"
       zone: "{{ workshop_dns_zone }}"
       record: "{{ student }}.{{ instances.tags.Workshop | lower }}.{{ workshop_dns_zone }}"
@@ -32,7 +32,7 @@
     become: no
     vars:
       code_dns_record_state: present
-    route53:
+    amazon.aws.route53:
       state: "{{ code_dns_record_state }}"
       zone: "{{ workshop_dns_zone }}"
       record: "{{ student }}-code.{{ instances.tags.Workshop | lower }}.{{ workshop_dns_zone }}"
@@ -50,7 +50,7 @@
     become: no
     vars:
       satellite_dns_record_state: present
-    route53:
+    amazon.aws.route53:
       state: "{{ satellite_dns_record_state }}"
       zone: "{{ workshop_dns_zone }}"
       record: "{{ student }}-sat.{{ instances.tags.Workshop | lower }}.{{ workshop_dns_zone }}"
@@ -68,7 +68,7 @@
     become: no
     vars:
       attendance_dns_record_state: present
-    route53:
+    amazon.aws.route53:
       state: "{{ attendance_dns_record_state }}"
       zone: "{{ workshop_dns_zone }}"
       record: "{{ instances.tags.Workshop | lower }}.{{ workshop_dns_zone }}"
