--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,10 +1,29 @@
-[galaxy]
-server_list = automation_hub, galaxy
+---
+collections:
+  - name: community.general
+    version: "7.1.0"
 
-[galaxy_server.automation_hub]
-url=https://cloud.redhat.com/api/automation-hub/
-auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
-token=AABBccddeeff112233gghh
+  - name: community.postgresql
+    version: "3.0.0"
 
-[galaxy_server.galaxy]
-url=https://galaxy.ansible.com/
+  - name: ansible.posix
+    version: "1.5.4"
+
+  - name: amazon.aws
+    version: "5.5.2"
+  
+  - name: ansible.controller
+    version: "4.2.0"
+ 
+  - name: ansible.netcommon
+    version: "4.1.0"
+  
+  - name: redhat.insights
+    version: "1.0.7"
+  
+  - name: redhat.satellite
+    version: "3.9.0"
+  
+  - name: redhat_cop.controller_configuration
+    version: "2.2.5"
+...
