--- a/setup_satellite.yml
+++ b/setup_satellite.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: "{{ HOSTS | default('satellite.example.com') }}"
   connection: local
-  gather_facts: no
+  gather_facts: false
   tasks:
     - name: Satellite deployment instrumentation
       ansible.builtin.uri:
@@ -28,13 +28,35 @@
     bulk_load_size: 1000
 
 - hosts: "{{ HOSTS | default('satellite.example.com') }}"
-  connection: local
-  gather_facts: no
+  become: true
   vars:
-    refresh_satellite_manifest: no
+    refresh_satellite_manifest: false
     refresh_timeout: 14400
-    refresh_retry_interval: 15
+  tasks:
+    - block:
+        - name: Create tempfile for Satellite production.log asynchronous tail
+          tempfile:
+            state: file
+          register: sat_prodlog_tempfile
 
+        - name: Asynchronous tail Satellite production.log to tempfile 
+          shell: tail -n 0 -f /var/log/foreman/production.log > {{ sat_prodlog_tempfile.path }}
+          async: "{{ refresh_timeout }}"
+          poll: 0
+      when: refresh_satellite_manifest
+
+- hosts: "{{ HOSTS | default('satellite.example.com') }}"
+  connection: local
+  gather_facts: false
+  tasks:
+    - ansible.builtin.include_tasks: setup_satellite_infra_subtasks.yml
+
+- hosts: "{{ HOSTS | default('satellite.example.com') }}"
+  connection: local
+  gather_facts: false
+  vars:
+    refresh_satellite_manifest: false
+    refresh_timeout: 14400
   tasks:
     - name: refresh manifest
       redhat.satellite.subscription_manifest:
@@ -43,40 +65,26 @@
       async: "{{ refresh_timeout }}"
       poll: 0
       register: refresh_async
+      delegate_to: localhost
       when: refresh_satellite_manifest
 
 - hosts: "{{ HOSTS | default('satellite.example.com') }}"
   become: true
   vars:
-    refresh_satellite_manifest: no
+    refresh_satellite_manifest: false
     refresh_timeout: 14400
-    refresh_retry_interval: 15
-
   tasks:
-    - name: >
-        Watch the Satellite production.log until ManifestRefresh result ==> success appears before continuing...
-      wait_for:
-        path: /var/log/foreman/production.log
-        search_regex: "^.*ManifestRefresh.*state\ changed.*\ stopped\ \ result.*\ success"
-        timeout: 1500
-        sleep: 20
+    - block:
+      - name: >
+          Watch the temp file until ManifestRefresh result ==> success appears before continuing...
+        wait_for:
+          path: "{{ sat_prodlog_tempfile.path }}"
+          search_regex: "^.*ManifestRefresh.*state\ changed.*\ stopped\ \ result.*\ success"
+          timeout: 1500
+          sleep: 20
+
+      - name: Remove tempfile
+        file:
+          path: "{{ sat_prodlog_tempfile.path }}"
+          state: absent
       when: refresh_satellite_manifest
-
-- hosts: "{{ HOSTS | default('satellite.example.com') }}"
-  connection: local
-  gather_facts: no
-  vars:
-    satellite_infra_workloads:
-      - redhat.satellite.repositories
-      - redhat.satellite.lifecycle_environments
-      - content_views
-      - redhat.satellite.activation_keys
-
-  tasks:
-
-    - name: deploy satellite_infra workloads
-      include_role:
-        name: "{{ satellite_infra_vars }}"
-      loop: "{{ satellite_infra_workloads }}"
-      loop_control:
-        loop_var: satellite_infra_vars
