--- a/snapshot_instance.yml
+++ b/snapshot_instance.yml
@@ -1,11 +1,20 @@
 ---
 - name: Take snapshot of instance
-  hosts: ansible-1.example.com
-  connection: local
-  gather_facts: no
-  tasks:
-  - name: Take snapshot of instances in region "{{ ec2_region }}"
-    include_role:
-      name: ec2_node_tools
-    vars:
-      ec2_instance_action: "snapshot_create"
+- hosts: "{{ HOSTS is defined | ternary(HOSTS, PREFIX|default('')+'*') }}"
+  become: yes
+  roles:
+    - name: lvm_snapshots
+      lvm_snapshots_set_name: ripu
+      lvm_snapshots_action: create
+      lvm_snapshots_snapshot_autoextend_threshold: 70
+      lvm_snapshots_snapshot_autoextend_percent: 20
+      lvm_snapshots_boot_backup: true
+      lvm_snapshots_use_boom: true
+      lvm_snapshots_volumes:
+        - vg: VolGroup00
+          lv: rootVol
+          size: 20%ORIGIN
+        - vg: VolGroup00
+          lv: varVol
+          size: 20%ORIGIN
+...
