--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -341,19 +341,41 @@ controller_templates:
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
 
-  - name: CONVERT2RHEL / 01 - Take node snapshot
-    description: Take node snapshot - selection via EC2 instance tags
-    project: Automated Management
-    playbook: snapshot_instance.yml
+  - name: CONVERT2RHEL / 01 - LVM snapshot create-revert-commit
+    description: 
+    project: LVM Snapshot
+    playbook: snapshot_instance_aap2.yml
     inventory: Workshop Inventory
-    limit: control
     extra_vars:
-      ec2_region: "{{ workshop_ec2_region }}"
-      instances:
-        tags:
-          short_name: node*
-          guid: "{{ lookup('env', 'AWX_HOST' ).split('.')[1] }}"
-          Student: "{{ lookup('env', 'AWX_HOST').split('.')[0] | urlsplit('hostname') }}"
+      lvm_snapshots_set_name: ripu
+      lvm_snapshots_snapshot_autoextend_threshold: 70
+      lvm_snapshots_snapshot_autoextend_percent: 20
+      lvm_snapshots_boot_backup: true
+      lvm_snapshots_use_boom: true
+      lvm_snapshots_volumes:
+        - vg: VolGroup00
+          lv: rootVol
+          size: 40%FREE
+        - vg: VolGroup00
+          lv: varVol
+          size: 40%FREE
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Server Name or Pattern
+          type: text
+          variable: PREFIX
+          required: false
+        - question_name: Choose Environment
+          type: multiplechoice
+          variable: lvm_snapshots_action
+          choices:
+            - create
+            - revert
+            - remove
+          required: true
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
