Generic snapshot name

--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -351,7 +351,7 @@ controller_templates:
     credentials:
       - Workshop Credential
     extra_vars:
-      lvm_snapshots_set_name: ripu
+      lvm_snapshots_set_name: snap01
       lvm_snapshots_snapshot_autoextend_threshold: 70
       lvm_snapshots_snapshot_autoextend_percent: 20
       lvm_snapshots_boot_backup: true
@@ -395,7 +395,7 @@ controller_templates:
     credentials:
       - Workshop Credential
     extra_vars:
-      lvm_snapshots_set_name: ripu
+      lvm_snapshots_set_name: snap01
       lvm_snapshots_snapshot_autoextend_threshold: 70
       lvm_snapshots_snapshot_autoextend_percent: 20
       lvm_snapshots_boot_backup: true
