--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -155,7 +155,7 @@ controller_templates:
         - question_name: Select Content View
           variable: content_view
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['foreman_content_views'] | selectattr('name', 'match', '^Oracle.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^Oracle.*$') | map(attribute='name') | list}}"
           required: true
 
   - name: SATELLITE / RHEL - Promote Content View
@@ -235,7 +235,7 @@ controller_templates:
         - question_name: Select Content View
           variable: content_view
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['foreman_content_views'] | selectattr('name', 'match', '^Oracle.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_content_views'] | selectattr('name', 'match', '^Oracle.*$') | map(attribute='name') | list}}"
           required: true
         - question_name: Current Lifecycle Environment
           variable: current_lifecycle_environment
