--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -240,12 +240,12 @@ controller_templates:
         - question_name: Current Lifecycle Environment
           variable: current_lifecycle_environment
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['lifecycle_environments'] | selectattr('name', 'match', '^Oracle.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^Oracle.*$') | map(attribute='name') | list}}"
           required: true
         - question_name: Next Lifecycle Environment
           variable: lifecycle_environment
           type: multiplechoice
-          choices: "{{ hostvars['satellite.example.com']['lifecycle_environments'] | selectattr('name', 'match', '^Oracle.*$') | map(attribute='name') | list}}"
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^Oracle.*$') | map(attribute='name') | list}}"
           required: true
 
   - name: SATELLITE / Delete host(s) in "node_group"
