Make satellite.example.com default host

--- a/oracle_gpg_key_import.yml
+++ b/oracle_gpg_key_import.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: "{{ HOSTS | default('satellite.example.com') }}"
   tasks:
   - name: Create gpg key directory for importing keys
     file:
