--- a/host_vars/satellite.example.com/content_views.yml
+++ b/host_vars/satellite.example.com/content_views.yml
@@ -44,11 +44,11 @@ satellite_content_views:
     repositories:
     # name provided here is parsed by role and appends basearch to the name submitted to Satellite
     # ...so for actual repo named 'Oracle-7 - Base RPMs x86_64' set name to 'Oracle-7 - Base RPMs' here
-    - name: Oracle-7 - Base RPMs
+    - name: Oracle-7 - Base RPMs x86_64
       product: 'Oracle Linux 7'
     #- name: Oracle Linux 7 - Addons RPMs x86_64
     #  basearch: x86_64
-    - name: Oracle-7 - Addons RPMs
+    - name: Oracle-7 - Addons RPMs x86_64
       product: 'Oracle Linux 7'
   # Oracle Linux 8
   - name: Oracle8
