--- a/server_patch.yml
+++ b/server_patch.yml
@@ -30,16 +30,16 @@
     debug:
       msg: "{{ updates }}"
       
-  - name: Sending an email using Ansible
-    mail:
-      host: smtp.gmail.com
-      port: 587
-      username: dmeonavneet@gmail.com
-      password: "Kalu@134"
-      to: demonavneet@gmail.com
-      subject: Email By Ansible - about patch 
-      body: Patch Successfuly completed check Satellite server for more details 
-      delegate_to: localhost          
+#  - name: Sending an email using Ansible
+#    mail:
+#      host: smtp.gmail.com
+#      port: 587
+#      username: dmeonavneet@gmail.com
+#      password: "Kalu@134"
+#      to: demonavneet@gmail.com
+#      subject: Email By Ansible - about patch 
+#      body: Patch Successfuly completed check Satellite server for more details 
+#      delegate_to: localhost          
     
   - name: updated package list
     debug:
