--- a/host_vars/satellite.example.com/repositories.yml
+++ b/host_vars/satellite.example.com/repositories.yml
@@ -39,3 +39,6 @@ satellite_products:
       - name: Foreman Client CentOS 8
         url: https://yum.theforeman.org/client/latest/el8/x86_64/
         content_type: yum
+      - name: Foreman Client CentOS 9
+        url: https://yum.theforeman.org/client/latest/el9/x86_64/
+        content_type: yum
