--- a/setup_controller.yml
+++ b/setup_controller.yml
@@ -3,18 +3,18 @@
   connection: local
   vars:
     controller_infra_workloads:
-      - redhat_cop.controller_configuration.execution_environments
-      - redhat_cop.controller_configuration.projects
-      - redhat_cop.controller_configuration.inventories
-      - redhat_cop.controller_configuration.inventory_sources
-      - redhat_cop.controller_configuration.notification_templates
-      - redhat_cop.controller_configuration.job_templates
-      - redhat_cop.controller_configuration.workflow_job_templates
+      - infra.controller_configuration.execution_environments
+      - infra.controller_configuration.projects
+      - infra.controller_configuration.inventories
+      - infra.controller_configuration.inventory_sources
+      - infra.controller_configuration.notification_templates
+      - infra.controller_configuration.job_templates
+      - infra.controller_configuration.workflow_job_templates
     controller_hostname: "{{ lookup('env', 'TOWER_HOST') }}"
     #controller_hostname: "{{ hostvars[inventory_hostname].ansible_fqdn }}"
     controller_validate_certs: false
   #collections:
-  #  - redhat_cop.controller_configuration
+  #  - infra.controller_configuration
 
   tasks:
     - name: Controller deployment instrumentation
@@ -42,4 +42,4 @@
   
     - name: Call dispatch role
       ansible.builtin.include_role:
-        name: redhat_cop.controller_configuration.dispatch
+        name: infra.controller_configuration.dispatch
