--- a/group_vars/control/inventory_sources.yml
+++ b/group_vars/control/inventory_sources.yml
@@ -1,7 +1,7 @@
 ---
 controller_inventory_sources:
   - name: satellite_source
-    inventory: Workshop Inventory
+    inventory: EC2 Dynamic Inventory
     credential: Inventory Credential
     source: satellite6
     execution_environment: auto_satellite workshop execution environment
@@ -17,7 +17,7 @@ controller_inventory_sources:
           key: satellite_operatingsystem_name
 
   - name: EC2 Dynamic Source - CentOS7 Development
-    inventory: Workshop Inventory
+    inventory: EC2 Dynamic Inventory
     source: ec2
     source_vars:
       regions:
@@ -47,7 +47,7 @@ controller_inventory_sources:
     update_cache_timeout: 0
 
   - name: EC2 Dynamic Source - CentOS7 Development - ALL
-    inventory: Workshop Inventory
+    inventory: EC2 Dynamic Inventory
     source: ec2
     source_vars:
       regions:
@@ -77,7 +77,7 @@ controller_inventory_sources:
     update_cache_timeout: 0
 
   - name: EC2 Dynamic Source - CentOS7 Production
-    inventory: Workshop Inventory
+    inventory: EC2 Dynamic Inventory
     source: ec2
     source_vars:
       regions:
@@ -109,7 +109,7 @@ controller_inventory_sources:
     update_cache_timeout: 0
 
   - name: EC2 Dynamic Source - RHEL7 Development
-    inventory: Workshop Inventory
+    inventory: EC2 Dynamic Inventory
     source: ec2
     source_vars:
       regions:
@@ -138,7 +138,7 @@ controller_inventory_sources:
     update_cache_timeout: 0
 
   - name: EC2 Dynamic Source - RHEL7 Development - ALL
-    inventory: Workshop Inventory
+    inventory: EC2 Dynamic Inventory
     source: ec2
     source_vars:
       regions:
@@ -167,7 +167,7 @@ controller_inventory_sources:
     update_cache_timeout: 0
 
   - name: EC2 Dynamic Source - RHEL7 Production
-    inventory: Workshop Inventory
+    inventory: EC2 Dynamic Inventory
     source: ec2
     source_vars:
       regions:
